<resources>
    <string name="app_name">Hands Up</string>

    <string name="presenterSelect">Presenter</string>
    <string name="audienceSelect">Audience</string>
    <string name="appName">Hands Up</string>
    <string name="appLogo">Hands Up Logo</string>
    <string name="companyLogo">Presentech Logo</string>
    <string name="background">App Background</string>

    <string-array name="audienceDrawerOptions">
        <item>Home</item>
        <item>Help</item>
        <item>Select New Session</item>
        <item>About</item>
    </string-array>

    <string-array name="presenterDrawerIcons">
        <item>@drawable/home_icon</item>
        <item>@drawable/create_icon</item>
        <item>@drawable/settings_icon</item>
        <item>@drawable/question_icon</item>
        <item>@drawable/info_icon</item>
    </string-array>

    <string-array name="presenterDrawerOptions">
        <item>Home</item>
        <item>Create New Session</item>
        <item>Settings</item>
        <item>Help</item>
        <item>About</item>
    </string-array>

    <string-array name="presenterDrawerIcons_RO">
        <item>@drawable/home_icon</item>
        <item>@drawable/create_icon</item>
        <item>@drawable/question_icon</item>
        <item>@drawable/info_icon</item>
    </string-array>

    <string-array name="presenterDrawerOptions_RO">
        <item>Home</item>
        <item>Create New Session</item>
        <item>Help</item>
        <item>About</item>
    </string-array>

    <string-array name="audienceDrawerIcons">
        <item>@drawable/home_icon</item>
        <item>@drawable/question_icon</item>
        <item>@drawable/wifi_icon</item>
        <item>@drawable/info_icon</item>
    </string-array>

    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close_Drawer</string>

    <string-array name="about">
        <item>Developed by Presentech, York</item>
        <item>v1.0.0</item>
        <item>Developed by: Edward Prentice, Alex Butcher, Amit Ramjali, Connor Stoner, Jack Bardsley, Jay Doshi, Lewis Tate, Luke Richardson, Noor Mansur, and Steve Clarke </item>
        <item>Special thanks to UoY Electronics and Martin Robinson</item>
    </string-array>

    /*Strings for colours*/
    <string name="presentechblue">#60ccbf</string>
    <string name="backgroundgrey">#292929</string>
    <string name="darkgrey">#6c6c6c</string>
    <string name="lightgrey">#b9b3b3</string>

    /*Login Screen Strings*/
    <string name="title_activity_login_screen">Hands Up Account Login</string>
    <string name="title_activity_registration">Hands Up registration</string>
    <string name="title_activity_login_success">Login Successful</string>
    <string name="title_activity_login_failed">Login Failed</string>
    <string name="sign_in_button">Login</string>
    <string name="register_button">Register</string>
    <string name="login_success_confirmation">Login Attempt Successful</string>
    <string name="login_failed_confirmation">Login Attempt Failed</string>
    <string name="title_activity_login">LoginActivity</string>

    <!--Session Select Strings -->
    <string name="title_activity_presentation_mode_tutorial">PresentationModeTutorial</string>
    <string name="skip_button">Skip</string>
    <string name="ptutorial_title">Presentation Mode Tutorial</string>
    <string name="ptutorial_load_title">How to Load a Presentation</string>
    <string name="ptutorial_load_content">LOAD \nCONTENT \nINSERT\n</string>
    <string name="ptutorial_access_title">How to Access a Presentation</string>
    <string name="ptutorial_access_content">ACCESS \nCONTENT \nINSERT\n</string>
    <string name="ptutorial_control_title">How to Control a Presentation</string>
    <string name="ptutorial_control_content">CONTROL \nCONTENT \nINSERT\n</string>
    <string name="ptutorial_configure_title">How to Configure a Presentation</string>
    <string name="ptutorial_configure_content">CONFIGURE \nCONTENT \nINSERT\n</string>
    <string name="ptutorial_exit_title">How to Exit a Presentation</string>
    <string name="ptutorial_exit_content">EXIT \nCONTENT \nINSERT\n</string>
    <string name="ptutorial_export_title">How to Export a Presentation</string>
    <string name="ptutorial_export_content">EXPORT \nCONTENT \nINSERT\n</string>

    <!-- Settings Strings -->
    <string name="action_settings">SETTINGS</string>
    <string name="accessibility_title">Accessibility</string>
    <string name="account_title">Account &amp; Privacy</string>
    <string name="presentation_feedback_title">Presentation &amp; Feedback Preferences</string>
    <string name="file_storage_title">File &amp; Storage Preferences</string>
    <string name="default_setting_title">Default Settings</string>
    <string-array name="default_storage_list">
        <item>Media Card</item>
        <item>Email</item>
        <item>Dropbox</item>
        <item>Google Drive</item>
    </string-array>
    <string-array name="default_storage_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="setting_entries">
        <item>Accessiblity</item>
        <item>Account &amp; Privacy</item>
        <item>Presentation &amp; Feedback Preferences</item>
        <item>File &amp; Storage Preferences</item>
        <item>Default Settings</item>
    </string-array>

    <string name="pref_brightness">pref_brightness</string>
    <string name="pref_auto_rotate">auto_rotate</string>
    <string name="pref_zoom">zoom</string>
    <string name="slide_content_timings_title">Media Transition Settings</string>
    <string name="loop_message">Loop Continuously</string>
    <string name="loop_message_second">\n(when you reach the end of a presentation HandsUp
will replay it)</string>


    <string name="title_activity_audience_session_select">AudienceSessionSelect</string>

    <!-- Hosting Wizard Strings -->
    <string name="hosting_wizard_title">Create New Session</string>
    <string name="selectPresentation">Source File</string>
    <string name="sessionName">Name:</string>
    <string name="sessionPassword">Password:</string>
    <string name="title_hint">Session Name</string>
    <string name="password_hint">Session Password</string>
    <string name="location_hint">Session Location</string>
    <string name="FeedbackOptionsTitle">Feedback Options</string>
    <string name="UnderstandingIconsSelect">Understanding Icons</string>
    <string name="MessagingSelect">Multiple-Choice Icons</string>
    <string name="MultipleChoiceIconsSelect">Messaging</string>
    <string name="FeedbackPerSlideSelect">Feedback per Slide</string>
    <string name="HideFeedbackSelect">Hide feedback during presentation</string>
    <string name="createSession">Create Session</string>

    <!-- Audience Tutorial Strings -->
    <string name="title_activity_audience_tutorial">Help!</string>
    <string name="welcome">Welcome to Hands Up - tagline!</string>
    <string name="aboutApp">What hands up does</string>
    <string name="title2">Feedback options available are:</string>
    <string name="button1">Skip</string>
    <string name="button2">Next</string>
    <string name="button3">Back</string>
    <string name="button4">Done</string>
    <string name="tickExplanation">Select to show understanding of the topic</string>
    <string name="crossExplanation">Select to show you need the topic to be repeated</string>
    <string name="questionExplanation">Select to show you need some extra help on the topic</string>
    <string name="iconsExplanation">These icons can be used to indicate understanding on a topic.</string>
    <string name="lettersExplanation">Letters can be used to respond to multiple choice questions.</string>
    <string name="presentation_container">Presentation</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_audience_connect">AudienceConnect</string>
    <string name="title_activity_testing_connections">testingConnections</string>
</resources>
