<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundgrey"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/backgroundgrey"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_presentation_mode_tutorial"
    tools:context="com.presentech.handsup.PresentationModeTutorial">

    <Button android:id="@+id/skip_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/export_content"
        android:layout_marginTop="10dp"
        android:onClick="nextActivity"
        android:background="@color/presentechBlue"
        android:textColor="@color/textColour"
        android:text="@string/skip_button" />

    <TextView android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/textColour"
        android:text="@string/ptutorial_title" />

    <Button android:id="@+id/load_title"
        style="@style/tutorialTitle"
        android:layout_below="@+id/title"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:onClick="expandTextLoad"
        android:text="@string/ptutorial_load_title"/>


    <TextView android:id="@+id/load_content"
        style="@style/tutorialContent"
        android:layout_below="@+id/load_title"
        android:clickable="true"
        android:onClick="expandTextLoad"
        android:text="@string/ptutorial_load_content"/>

    <Button android:id="@+id/access_title"
        style="@style/tutorialTitle"
        android:layout_below="@+id/load_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:onClick="expandTextAccess"
        android:text="@string/ptutorial_access_title"/>

    <TextView android:id="@+id/access_content"
        style="@style/tutorialContent"
        android:layout_below="@+id/access_title"
        android:clickable="true"
        android:onClick="expandTextAccess"
        android:text="@string/ptutorial_access_content"/>

    <Button android:id="@+id/control_title"
        style="@style/tutorialTitle"
        android:layout_below="@+id/access_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:onClick="expandTextControl"
        android:text="@string/ptutorial_control_title"/>

    <TextView android:id="@+id/control_content"
        style="@style/tutorialContent"
        android:layout_below="@+id/control_title"
        android:clickable="true"
        android:onClick="expandTextControl"
        android:text="@string/ptutorial_control_content"/>

    <Button android:id="@+id/configure_title"
        style="@style/tutorialTitle"
        android:layout_below="@+id/control_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:onClick="expandTextConfigure"
        android:text="@string/ptutorial_configure_title"/>

    <TextView android:id="@+id/configure_content"
        style="@style/tutorialContent"
        android:layout_below="@+id/configure_title"
        android:clickable="true"
        android:onClick="expandTextConfigure"
        android:text="@string/ptutorial_configure_content"/>

    <Button android:id="@+id/exit_title"
        style="@style/tutorialTitle"
        android:layout_below="@+id/configure_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:onClick="expandTextExit"
        android:text="@string/ptutorial_exit_title"/>

    <TextView android:id="@+id/exit_content"
        style="@style/tutorialContent"
        android:layout_below="@+id/exit_title"
        android:clickable="true"
        android:onClick="expandTextExit"
        android:text="@string/ptutorial_exit_content"/>

    <Button android:id="@+id/export_title"
        style="@style/tutorialTitle"
        android:layout_below="@+id/exit_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:onClick="expandTextExport"
        android:text="@string/ptutorial_export_title"/>

    <TextView android:id="@+id/export_content"
        style="@style/tutorialContent"
        android:layout_below="@+id/export_title"
        android:clickable="true"
        android:onClick="expandTextExport"
        android:text="@string/ptutorial_export_content"/>

</RelativeLayout>
</ScrollView>