<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/hostingWizard_drawerFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundgrey">

    <!-- Main Content -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/inputGrid"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <EditText
                    android:id="@+id/SessionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:layout_marginBottom="16dp"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:inputType="text"
                    android:hint="@string/title_hint"
                    android:textColorHint="@color/textColour"
                    android:textColor="@color/textColour"
                    android:background="@color/darkgrey"/>

                <EditText
                    android:id="@+id/SessionPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:layout_marginBottom="16dp"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:inputType="textVisiblePassword"
                    android:hint="@string/password_hint"
                    android:textColorHint="@color/textColour"
                    android:textColor="@color/textColour"
                    android:background="@color/darkgrey"/>

                <EditText
                    android:id="@+id/SessionLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:layout_marginBottom="16dp"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:inputType="textVisiblePassword"
                    android:hint="@string/location_hint"
                    android:textColorHint="@color/textColour"
                    android:textColor="@color/textColour"
                    android:background="@color/darkgrey"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/chooseSourceFile"
                    android:text="@string/selectPresentation"
                    android:background="@color/darkgrey"
                    android:textColor="@color/textColour"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/optionsGrid"
                android:orientation="vertical"
                android:layout_toEndOf="@+id/inputGrid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/FeedbackOptionsTitle"
                    android:text="@string/FeedbackOptionsTitle"
                    android:textColor="@color/textColour"
                    android:background="@color/darkgrey"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/UnderstandingIcons"
                    android:text="@string/UnderstandingIconsSelect"
                    android:textColor="@color/textColour"
                    android:background="@color/lightgrey"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/MultipleChoiceIcons"
                    android:text="@string/MultipleChoiceIconsSelect"
                    android:textColor="@color/textColour"
                    android:background="@color/darkgrey"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/Messaging"
                    android:text="@string/MessagingSelect"
                    android:textColor="@color/textColour"
                    android:background="@color/lightgrey"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/FeedbackPerSlide"
                    android:text="@string/FeedbackPerSlideSelect"
                    android:textColor="@color/textColour"
                    android:background="@color/darkgrey"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/HideFeedbackDuringPresentation"
                    android:text="@string/HideFeedbackSelect"
                    android:textColor="@color/textColour"
                    android:background="@color/lightgrey"
                    android:paddingTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/CreateSession"
                    android:text="@string/createSession"
                    android:background="@color/darkgrey"
                    android:textColor="@color/textColour"
                    android:layout_marginTop="16dp"/>
            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>

    <!-- The navigation view -->
    <ListView
        android:theme="@style/DrawerTheme"
        android:id="@+id/hostingWizard_leftDrawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@color/presentechBlue"
        android:dividerHeight="1dp"
        android:background="@color/drawerBackground" />



</android.support.v4.widget.DrawerLayout>
